--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@300&family=Open+Sans&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
 
+/* Variables */
 :root {
   --sans: "Open Sans", sans-serif;
   --sanspro: "Open Sans", sans-serif;
   --libre: "Libre Franklin", sans-serif;
+  --mon: "Montserrat", sans-serif;
   --primaryColor: #21e6c1;
   --secondaryColor: #1f4287;
   --bgColor: #071e3d;
@@ -26,6 +29,8 @@
 .navbar-brand {
   padding: 20px;
   transition: all 0.3s ease-in-out;
+  font-family: var(--mon);
+  font-weight: 600;
 }
 
 .navbar-brand:hover {
@@ -35,6 +40,7 @@
 }
 
 .navbar-nav .nav-item .nav-link {
+  font-family: var(--sanspro);
   padding: 20px !important;
 }
 
@@ -43,17 +49,21 @@
 }
 .active {
   color: var(--primaryColor) !important;
+  font-weight: lighter;
 }
 
 /* Social media top navbar */
-.topnav {
-  padding: 8px;
-  background: #192227 !important;
+
+marquee {
+  position: absolute;
+  bottom: 2px;
 }
-.topnav a {
-  padding: 15px;
-  transition: all 0.2s ease-in-out;
-}
-.topnav a:hover {
-  color: var(--primaryColor) !important;
+
+/* HEADER IMAGE WITH TEXT SECTION */
+
+/* MEDIA QUERIES */
+@media only screen and (max-width: 600px) {
+  .display-4 {
+    font-size: 48px;
+  }
 }
