--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,12 @@
   --mon: "Montserrat", sans-serif;
   --primaryColor: #21e6c1;
   --secondaryColor: #1f4287;
-  --bgColor: #071e3d;
+  --bgColor: #0a0b0d;
+  --purple: #892cdc;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 * {
@@ -27,7 +32,7 @@
 }
 
 .navbar-brand {
-  padding: 20px;
+  padding: 10px;
   transition: all 0.3s ease-in-out;
   font-family: var(--mon);
   font-weight: 600;
@@ -36,7 +41,7 @@
 .navbar-brand:hover {
   color: var(--primaryColor) !important;
   position: relative;
-  margin-left: 10px;
+  margin-bottom: 10px;
 }
 
 .navbar-nav .nav-item .nav-link {
@@ -49,21 +54,96 @@
 }
 .active {
   color: var(--primaryColor) !important;
-  font-weight: lighter;
+  font-weight: lighter !important;
 }
 
 /* Social media top navbar */
 
 marquee {
   position: absolute;
-  bottom: 2px;
 }
 
 /* HEADER IMAGE WITH TEXT SECTION */
 
-/* MEDIA QUERIES */
-@media only screen and (max-width: 600px) {
-  .display-4 {
-    font-size: 48px;
+header {
+  position: relative;
+  background-color: black;
+  height: 90vh;
+  min-height: 25rem;
+  width: 100%;
+  overflow: hidden;
+}
+
+header video {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: 0;
+  -ms-transform: translateX(-50%) translateY(-50%);
+  -moz-transform: translateX(-50%) translateY(-50%);
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
+}
+
+header .container {
+  position: relative;
+  bottom: 20px;
+  z-index: 2;
+}
+
+header .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: black;
+  opacity: 0.4;
+  z-index: 1;
+}
+.header .overlay .container .btn:hover {
+  background: white !important;
+  color: black !important;
+}
+
+/* section 2 */
+/* Card styling */
+.card {
+  margin-bottom: 10px;
+}
+
+.card .front-Img {
+  box-shadow: rgba(100, 100, 111, 0.108) 0px 7px 29px 0px;
+}
+
+.what-we-provide {
+  background: #212121;
+}
+
+/* MOBILE MEDIA QUERIES  */
+
+@media (max-width: 575.98px) {
+  .display-1 {
+    font-size: 3rem;
+    font-weight: 300;
+    line-height: 1;
   }
+}
+
+.btn-change8 {
+  background: lightseagreen;
+  border: 0px;
+  color: #fff;
+  box-shadow: 0 0 1px #ccc;
+  -webkit-transition-duration: 0.4s;
+  -webkit-transition-timing-function: linear;
+  box-shadow: 0px 0 0 rgb(150, 255, 250) inset;
+}
+.btn-change8:hover {
+  -webkit-box-shadow: -200px 0 0 rgb(89, 194, 189) inset;
+  color: white !important;
 }
