--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@300&family=Open+Sans&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Anonymous+Pro&display=swap");
 
 /* Variables */
 :root {
@@ -10,9 +11,11 @@
   --sanspro: "Open Sans", sans-serif;
   --libre: "Libre Franklin", sans-serif;
   --mon: "Montserrat", sans-serif;
-  --primaryColor: #21e6c1;
+  --anon: "Anonymous Pro", monospace;
+  --lightpurple: #bc6ff1;
+  --primaryColor: #892cdc;
   --secondaryColor: #1f4287;
-  --bgColor: #0a0b0d;
+  --bgColor: #000000;
   --purple: #892cdc;
 }
 
@@ -29,6 +32,7 @@ html {
 /* Navbar */
 .navbar {
   border-radius: 0px;
+  background: var(--bgColor) !important;
 }
 
 .navbar-brand {
@@ -53,7 +57,7 @@ html {
   color: var(--primaryColor) !important;
 }
 .active {
-  color: var(--primaryColor) !important;
+  color: var(--lightpurple) !important;
   font-weight: lighter !important;
 }
 
@@ -74,40 +78,23 @@ header {
   overflow: hidden;
 }
 
-header video {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  min-width: 100%;
-  min-height: 100%;
-  width: auto;
-  height: auto;
-  z-index: 0;
-  -ms-transform: translateX(-50%) translateY(-50%);
-  -moz-transform: translateX(-50%) translateY(-50%);
-  -webkit-transform: translateX(-50%) translateY(-50%);
-  transform: translateX(-50%) translateY(-50%);
-}
-
 header .container {
   position: relative;
   bottom: 20px;
   z-index: 2;
 }
 
-header .overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  background-color: black;
-  opacity: 0.4;
-  z-index: 1;
+header .container h1 {
+  font-family: var(--mon) !important;
 }
-.header .overlay .container .btn:hover {
-  background: white !important;
-  color: black !important;
+
+header .container p {
+  font-family: var(--anon) !important;
+}
+
+header .container a {
+  font-family: var(--mon);
+  font-weight: 600;
 }
 
 /* section 2 */
@@ -135,15 +122,16 @@ header .overlay {
 }
 
 .btn-change8 {
-  background: lightseagreen;
+  background: var(--primaryColor);
   border: 0px;
+  border-radius: 40px;
   color: #fff;
   box-shadow: 0 0 1px #ccc;
   -webkit-transition-duration: 0.4s;
   -webkit-transition-timing-function: linear;
-  box-shadow: 0px 0 0 rgb(150, 255, 250) inset;
+  box-shadow: 0px 0 0 #7b27c5de inset;
 }
 .btn-change8:hover {
-  -webkit-box-shadow: -200px 0 0 rgb(89, 194, 189) inset;
+  -webkit-box-shadow: -200px 0 0 #6e1ab8 inset;
   color: white !important;
 }
