--- a/src/components/Resource.css
+++ b/src/components/Resource.css
@@ -21,9 +21,9 @@
 
 /* RESOURCE CSS HERE */
 .source {
-  height: 5vh !important;
+  height: 100vh !important;
   min-height: 500px;
-  background-image: url("https://images.unsplash.com/photo-1562034475-0292da13283a?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1049&q=80");
+  background-image: url("https://images.unsplash.com/photo-1547954575-855750c57bd3?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1050&q=80");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -41,6 +41,7 @@
 .webdev .container .devInfo span {
   width: 100px;
   font-family: var(--mon) !important;
+  background: #7f5af0 !important;
 }
 
 .webdev .container .devInfo h2 {
@@ -77,8 +78,8 @@
   font-size: 12px;
   position: relative;
   top: -6px;
-  width: 100px;
-  font-family: var(--anon) !important;
+  width: 120px;
+  font-family: var(--mon) !important;
 }
 
 .webdev .container .card .card-body p {
@@ -95,9 +96,13 @@
 }
 
 /* SUB NAV STYLES */
+.nav {
+  background: #16161a !important;
+}
 
 .nav .nav-item {
-  color: white;
+  color: #fffffe;
+  font-weight: 600;
 }
 
 .nav .nav-item .nav-link {
@@ -105,5 +110,13 @@
 }
 
 .nav .nav-item:hover {
-  color: lightblue;
+  color: #fffffe;
+  border-radius: 20px;
+  background: #7f5af0;
+}
+
+.active {
+  background-color: gold !important;
+  color: Black !important;
+  font-weight: bold !important;
 }
