--- a/src/App.css
+++ b/src/App.css
@@ -69,6 +69,7 @@ html {
 
 .bgActive {
   background: #16161a !important;
+  /* display: none !important; */
 }
 
 /* Social media top navbar */
@@ -344,3 +345,11 @@ transition: all 0.4s;
 
 /* RESOURCE PAGE */
 /* IN RESOURCE.CSS */
+.resource {
+  position: relative;
+  background-color: black;
+  height: 75vh !important;
+  min-height: 10rem;
+  width: 100%;
+  overflow: hidden;
+}
