--- a/src/App.css
+++ b/src/App.css
@@ -136,7 +136,13 @@ header .container h1 {
 }
 
 header .container p {
-  font-family: var(--anon) !important;
+  font-family: var(--mon) !important;
+  font-size: 16px;
+}
+
+header .container .btn-change8 {
+  font-family: var(--mon) !important;
+  font-weight: 600;
 }
 
 header .container a {
@@ -223,6 +229,7 @@ header .container a {
 
 .btn-change8 {
   background: var(--primaryColor);
+  /* font-family: var(--mon) !important; */
   border: 0px;
   border-radius: 40px;
   color: #fff;
