--- a/src/App.css
+++ b/src/App.css
@@ -275,9 +275,9 @@ transition: all 0.4s;
   color: white !important;
 }
 
-.features .card {
+/* .features .card {
   height: 520px !important;
-}
+} */
 
 /* ABOUT STYLINGS */
 .masthead {
