fixed headings titles

--- a/src/components/Resource.css
+++ b/src/components/Resource.css
@@ -26,7 +26,7 @@
 }
 
 .webdev {
-  padding-top: 30px;
+  padding-top: 50px;
   padding-bottom: 50px;
 }
 
@@ -101,7 +101,9 @@
 .nav .nav-item {
   color: #fffffe;
   font-weight: 600;
-  padding: 0.2rem 0.5rem !important;
+  padding: 0.1rem 0.2rem !important;
+  /* border: solid #7f5af0 0.5px; */
+  border-radius: 20px;
 }
 
 .nav .nav-item .nav-link {
