--- a/src/components/Resource.css
+++ b/src/components/Resource.css
@@ -194,3 +194,16 @@
   padding: 100px;
   background: #16161a;
 }
+
+#btn-back-to-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  display: none;
+  background-color: #7f5af0;
+  color: white !important;
+}
+
+#btn-back-to-top:hover {
+  background-color: #7348f3e0;
+}
